fix(c-login-card-title): Add text wrap balance

--- a/packages/csc-ui/src/components/c-login-card-title/c-login-card-title.scss
+++ b/packages/csc-ui/src/components/c-login-card-title/c-login-card-title.scss
@@ -11,4 +11,5 @@
   font-weight: 700;
   line-height: 1.375;
   margin: 0 0 12px;
+  text-wrap: balance;
 }
